--- a/template.html
+++ b/template.html
@@ -3,10 +3,14 @@
 
   <head>
     <style>
+      h1 {
+        font-family: sans-serif;
+      }
     </style>
   </head>
 
   <body>
+    <h1> Hello world.</h1>
   </body>
 
 </html>
